<resources>
    <string name="app_name">MyResume</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_education">EducationActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="duration_label">Duration: </string>
    <string name="project_role">Role: </string>
    <string name="contact_me_label">Contact Me</string>

    <string name="summary_nav_item">Summary</string>
    <string name="education_nav_item">Education</string>
    <string name="skills_nav_item">Skills</string>
    <string name="experience_nav_item">Experience</string>
    <string name="project_nav_item">Projects</string>

    <string name="work_nav_group">Work</string>

</resources>
